@@ -1,4 +1,5 @@
 current:
+  * fix iPhone circular ref bug
   * add iPhone cache flush, change new libs to weak refs
   * fix iPhone async ref bug
   * enhance iPhone readertest w/more options
